# PFE-MULTIROBOT

./: ORB_Installation_Finale.txt  README.md
drone_workstation/drone_description/: CMakeLists.txt  package.xml
drone_workstation/drone_teleop/: CMakeLists.txt  package.xml
mobile_workstation/: model.config  model.sdf  readme.txt
mobile_workstation/kobuki_description/urdf/: kobuki_gazebo.urdf.xacro
mobile_workstation/mobile_navigation/: CMakeLists.txt  package.xml
mobile_workstation/mobile_navigation/launch/: amcl.launch  view_navigation.launch
mobile_workstation/mobile_navigation/launch/includes/: move_base.launch.xml
mobile_workstation/mobile_navigation/launch/includes/amcl/: amcl.launch.xml
mobile_workstation/mobile_standalone_simulation/: package.xml
mobile_workstation/mobile_teleop/: CMakeLists.txt
mobile_workstation/turtlebot_description/launch/: test.launch  test_gazebo.launch
mobile_workstation/turtlebot_description/robots/: turtlebot.urdf.xacro
mobile_workstation/turtlebot_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml  r200_costmap_params.yaml
mobile_workstation/turtlebot_teleop/: CMakeLists.txt
mobile_workstation/turtlebot_teleop/launch/: keyboard_teleop.launch
mobile_workstation/version2/: README.txt  kokubi_turtlebot.launch  turtlebot_navigation.launch
project_environement/world_sim/: CMakeLists.txt  package.xml
project_environement/world_sim/map/: maze.yaml
turtlebot_stage/launch/: test_stage.launch  test_world_stage.launch  turtlebot_in_stage.launch
turtlebot_stage/rviz/: navigation.rviz
(+23 files in other folders)
