<?xml version="1.0"?>
<package format="2">
  <name>mobile_navigation</name>
  <version>0.0.1</version>
  <description>mobile navigation package allows the mobile robot to navigate in a know enriromment</description>

  <maintainer email="pierre.joyet@etu.sorbonne-universite.fr">Pierre JOYET</maintainer>

  <license>BDS</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>




  <export>

  </export>
</package>